feat: send notification when sensor value exceed threshold (#13)
* draft, not test, missing alot

* not test

* done - no test

* tested

* chore

* add cmt

* add mqtt creds
