# internal/transport/rest/api/v1/v1.go
@@ -7,6 +7,7 @@ import (
 	_ "github.com/safe-homie/backend/docs"
 	"github.com/safe-homie/backend/infrastructure"
 	"github.com/safe-homie/backend/internal/service/demo"
+	"github.com/safe-homie/backend/internal/service/notify"
 	"github.com/safe-homie/backend/internal/service/sensor"
 	echoSwagger "github.com/swaggo/echo-swagger"
 )
@@ -15,6 +16,7 @@ type APIV1 struct {
 	context       infrastructure.AppContext
 	demoService   *demo.Demo
 	sensorService sensor.SensorService
+	notifyService notify.NotifyService
 }
 
 func New(context infrastructure.AppContext, infra infrastructure.AppInfra, srv infrastructure.AppService) *APIV1 {
@@ -22,6 +24,7 @@ func New(context infrastructure.AppContext, infra infrastructure.AppInfra, srv i
 		context:       context,
 		demoService:   new(demo.Demo),
 		sensorService: srv.SensorService(),
+		notifyService: srv.NotifyService(),
 	}
 }
 
@@ -34,6 +37,9 @@ func (a *APIV1) RegisterHandlers(e *echo.Echo) {
 	v1 := e.Group("/api/v1")
 	v1.GET("/demo", Wrap(a.Demo))
 
+	notify := v1.Group("/notify")
+	notify.POST("/token", Wrap(a.SaveToken))
+
 	sensor := v1.Group("/sensors")
 	{
 		sensor.GET("/:id", Wrap(a.GetSensor))
@@ -41,6 +47,7 @@ func (a *APIV1) RegisterHandlers(e *echo.Echo) {
 		sensor.POST("", Wrap(a.CreateSensor))
 		sensor.GET("/data/latest", Wrap(a.ListLatestSensorDataByLocation))
 	}
+
 }
 
 func (a *APIV1) Demo(ctx echo.Context) *Response {
